--- a/public_html/index.html
+++ b/public_html/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<div id="wrapper">
+<div id="wrapper" class="container no-padding">
 <!--Navbar section-->
 <nav class="navbar navbar-expand-md navbar-dark p-3 bg-dark">
     <div class="container-fluid">
@@ -29,24 +29,25 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="#">Home</a>
-                <a class="nav-link" href="#">What is Yoga?</a>
-                <a class="nav-link" href="#">Classes</a>
-                <a class="nav-link" href="#">About Me</a>
+                <a class="nav-link" href="#ganesha-section">Home</a>
+                <a class="nav-link" href="#intro">What is Yoga?</a>
+                <a class="nav-link" href="#classes">Classes</a>
+                <a class="nav-link" href="#about-me">About Me</a>
+                <a class="nav-link" href="#namaste">Contact</a>
             </div>
         </div>
     </div>
 </nav>
 
 <!--Lord Ganesha Section Parallax-->
-<div id="ganesha-section" class="parallax">
+<div id="ganesha-section" class="parallax img-fluid">
     <div class="top-heading">
         <h1>Yoga is Samadhi</h1>
     </div>
 </div>
 
 <!--Section-1: Quote-1 "Yoga Chittavritti Nirodha"-->
-<div class="section-1">
+<div id="intro" class="section-1">
     <div class="container-fluid-quote-1">
         <p><i>"Yoga Chittavritti Nirodha"</i></p>
         <p>Maharshi Patanjali, ancient rishi and founder of the Yoga Sutras (ca. 250 B.C.) defines Yog as concentration.</p>
@@ -55,7 +56,15 @@
 </div>
 
 <!--Section-2 "India" image and quote-2-->
-<section-2>
+ <section-2>
+     <div>
+         <img id="India" src="images/quote-2.png" class="img-fluid" alt="Stillness">
+     </div>
+ </section-2>
+
+
+<!--<section-2>
+
   <div class="row">
       <div class="column">
           <img src="images/india-birds.jpg" alt="India" style="width: 100%">
@@ -63,11 +72,11 @@
       <div class="column">
          <img src="images/quote-2.png" style="width: 100%">
       </div>
-  </div>
-</section-2>
+  </div
+</section-2>-->
 
 <!--Section 3-->
-<div class="section-3">
+<div id="classes" class="section-3">
     <div class="container">
         <div class="row gy-4">
             <h1>Sequence</h1>
@@ -75,7 +84,7 @@
                 <div class="card h-100">
                     <img src="images/conditioning.jpg" class="card-img-top" alt="Conditioning">
                     <div class="card-body">
-                        <h1 class="card-title fw-bold">Conditioning</h1>
+                        <h1 class="card-title fw-bold">1. Conditioning</h1>
                         <h1>ૐ</h1>
                         <p class="card-text">Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</p>
                     </div>
@@ -85,7 +94,7 @@
                 <div class="card h-100">
                     <img src="images/hastapadasana.jpg" class="card-img-top" alt="Asanas">
                     <div class="card-body">
-                        <h1 class="card-title fw-bold">Asanas</h1>
+                        <h1 class="card-title fw-bold">2. Asanas</h1>
                         <h1>ૐ</h1>
                         <p class="card-text">The Asanas I am certified to teach are taken from traditional Hatha Yoga. They are chosen based on the overall directional stretch of the spine and are beginner friendly. They can be easily adjusted to match more difficult variations.</p>
                     </div>
@@ -95,7 +104,7 @@
                 <div class="card h-100">
                     <img src="images/pranayama.jpg" class="card-img-top" alt="Pranayamas">
                     <div class="card-body">
-                        <h1 class="card-title fw-bold">Pranayamas</h1>
+                        <h1 class="card-title fw-bold">3. Pranayamas</h1>
                         <h1>ૐ</h1>
                         <p class="card-text">Pranayams or Pranayamas are breathing exercises to increase the capacity of your lungs and help with oxygen and blood flow. Depending on individual conditions there are special varieties that can aid in overall balance of the system. There are also Pranayams that are safe for everyone to practice, i.e. Brahmari.</p>
                     </div>
@@ -105,7 +114,7 @@
                 <div class="card h-100">
                     <img src="images/shavasana.jpg" class="card-img-top" alt="Shavasana">
                     <div class="card-body">
-                        <h1 class="card-title fw-bold">Meditation</h1>
+                        <h1 class="card-title fw-bold">4. Meditation</h1>
                         <h1>ૐ</h1>
                         <p class="card-text">Every Yoga session should finish with mindful relaxation. This is often achieved through Shavasana ("The Corpse Pose"). Similar to conditioning at the beginning of each session, you can finish with a prayer or simply by chanting Aum.</p>
                     </div>
@@ -117,14 +126,15 @@
 
 
 <!--Section-4: About Me-->
-<div class="section-4">
-    <div class="container-fluid>
-    <img src="images/mirjam.jpg" class="rounded-circle" alt="Mirjam" width="250" height="250">
+<div id="about-me" class="section-4">
+        <div class="container-fluid">
+
     <h1>About Me</h1>
+    <img src="./images/mirjam.jpg" class="rounded-circle" alt="Mirjam" width="250" height="250">
     <div class="about-me">
         <p>My love for Yoga did not develop overnight, it took me a few years to get into it. Meditation and my love for Indian culture and philosophy made me want to learn more about Yogic Philosophy and the traditional forms of Yoga. It was very important to me to be taught by Indian teachers because I was looking to learn things that go beyond the practice of Asanas.</p>
         <p>During my research I found out about The Yoga Institute Santacruz, Mumbai. The Yoga Institute Mumbai is the oldest accredited Yoga school in the world. The current guru, Dr. Hansaji Yogendra, wife of the late Dr. Yogendra, had an influential role in the formulation of a formal syllabus for Yoga schools across the world. To this day she remains one of India's most influential experts in the field of Yoga. I thoroughly enjoyed my learning experience with my Indian teachers and "batch mates". I miss them dearly. We still message each other or meet up via Zoom to practice together.</p>
-        <p>The sequence that I follow is the sequence that I learned from my Indian teachers. I was also trained in Kriyas and Pranayamas which I practice. The Asanas that I am certified to teach are traditional and safe beginners friendly Asanas taken from Hatha Yoga. If you are interested in learning about Yogic Philosophy and techniques that go beyond obscure Asanas performed by Western celebrities, I suggest you check out their website.</p><br>
+        <p>The sequence that I follow is the sequence that I learned from my Indian teachers. I was also trained in Kriyas and Pranayamas which I practice. The Asanas that I am certified to teach are traditional and safe beginners' friendly Asanas taken from Hatha Yoga. If you are interested in learning about Yogic Philosophy and techniques that go beyond obscure poses performed by Western celebrities, I suggest you check out their website.</p><br>
         <p>Where I got certified as RYT 200: The Yoga Institute Santacruz, Mumbai.</p>
         <p>Find out more about my accredited Yoga school here:</p>
         <a href="https://theyogainstitute.org/">The Yoga Institute Mumbai Website</a><br>
@@ -136,7 +146,7 @@
 <!--Section-5: Contact Form & Weekly Mantra Sign Up-->
 <!--Contact Form-->
 <div class="section-5">
-    <h1 class="greeting">Namaste!</h1>
+    <h1 id="namaste" class="greeting">Namaste!</h1>
     <h1>ૐ Contact me here to inquire about classes:</h1>
 
         <div id="formContainer" class="container">
@@ -162,14 +172,6 @@
 
         <div id="output-area"></div>
 
-            <!--Weekly Mantra-->
-           <!-- <h1>ૐ Sign up for a weekly mantra!</h1>
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-mantra">Email address</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-            </div>
-            <button class="button-mantra">Receive Mantra</button>
-        </div>-->
 </div>
 
 <!--Sticky Footer-->
@@ -179,24 +181,26 @@
     </div>
 </footer>
 </div>
+</div>
 <!--Popper and Bootstrap Script Link insert here-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 
-<!--JQuery min., Form, Validate, additional methods insert here-->
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="crossorigin="anonymous"></script>
-<script crossorigin="anonymous" integrity="sha256-2Pjr1OlpZMY6qesJM68t2v39t+lMLvxwpa8QlRjJroA=" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js"></script>
-<script crossorigin="anonymous" integrity="sha256-F6h55Qw6sweK+t7SiOJX+2bpSAa3b/fnlrVCJvmEj1A=" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
-<script crossorigin="anonymous" integrity="sha256-0Yg/eibVdKyxkuVo1Qwh0DspoUCHvSbm/oOoYVz32BQ=" src="https://cdnjs.cloudflar.com/ajax/libs/jquery-validate/1.17.0/additional-methods.min.js"></script>
+<!-- jQuery, Form, Validate, Additional Methods, -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script crossorigin="anonymous" integrity="sha256-2Pjr1OlpZMY6qesJM68t2v39t+lMLvxwpa8QlRjJroA="
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js"></script>
+<script crossorigin="anonymous" integrity="sha256-F6h55Qw6sweK+t7SiOJX+2bpSAa3b/fnlrVCJvmEj1A="
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
+<script crossorigin="anonymous" integrity="sha256-0Yg/eibVdKyxkuVo1Qwh0DspoUCHvSbm/oOoYVz32BQ="
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/additional-methods.min.js"></script>
 
 <!--Recaptcha-->
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 <!--Custom jquery script insert here-->
 <script src="scripts/form-script.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
+
 
 </body>
 
