added hover over submit button, minor changes.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -29,7 +29,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="#ganesha-section">Home</a>
                 <a class="nav-link" href="#intro">What is Yoga?</a>
                 <a class="nav-link" href="#classes">Classes</a>
                 <a class="nav-link" href="#about-me">About Me</a>
@@ -63,18 +62,6 @@
  </section-2>
 
 
-<!--<section-2>
-
-  <div class="row">
-      <div class="column">
-          <img src="images/india-birds.jpg" alt="India" style="width: 100%">
-      </div>
-      <div class="column">
-         <img src="images/quote-2.png" style="width: 100%">
-      </div>
-  </div
-</section-2>-->
-
 <!--Section 3-->
 <div id="classes" class="section-3">
     <div class="container">
@@ -96,7 +83,7 @@
                     <div class="card-body">
                         <h1 class="card-title fw-bold">2. Asanas</h1>
                         <h1>ૐ</h1>
-                        <p class="card-text">The Asanas I am certified to teach are taken from traditional Hatha Yoga. They are chosen based on the overall directional stretch of the spine and are beginner friendly. They can be easily adjusted to match more difficult variations.</p>
+                        <p class="card-text">The Asanas I am certified to teach are taken from traditional Hatha Yoga. They are chosen based on the overall directional stretch of the spine and are beginner-friendly. They can be easily adjusted to match more difficult variations.</p>
                     </div>
                 </div>
             </div>
@@ -128,13 +115,12 @@
 <!--Section-4: About Me-->
 <div id="about-me" class="section-4">
         <div class="container-fluid">
-
     <h1>About Me</h1>
     <img src="./images/mirjam.jpg" class="rounded-circle" alt="Mirjam" width="250" height="250">
     <div class="about-me">
         <p>My love for Yoga did not develop overnight, it took me a few years to get into it. Meditation and my love for Indian culture and philosophy made me want to learn more about Yogic Philosophy and the traditional forms of Yoga. It was very important to me to be taught by Indian teachers because I was looking to learn things that go beyond the practice of Asanas.</p>
         <p>During my research I found out about The Yoga Institute Santacruz, Mumbai. The Yoga Institute Mumbai is the oldest accredited Yoga school in the world. The current guru, Dr. Hansaji Yogendra, wife of the late Dr. Yogendra, had an influential role in the formulation of a formal syllabus for Yoga schools across the world. To this day she remains one of India's most influential experts in the field of Yoga. I thoroughly enjoyed my learning experience with my Indian teachers and "batch mates". I miss them dearly. We still message each other or meet up via Zoom to practice together.</p>
-        <p>The sequence that I follow is the sequence that I learned from my Indian teachers. I was also trained in Kriyas and Pranayamas which I practice. The Asanas that I am certified to teach are traditional and safe beginners' friendly Asanas taken from Hatha Yoga. If you are interested in learning about Yogic Philosophy and techniques that go beyond obscure poses performed by Western celebrities, I suggest you check out their website.</p><br>
+        <p>The sequence that I follow is the sequence that I learned from my Indian teachers. I was also trained in Kriyas and Pranayamas which I practice. The Asanas that I am certified to teach are traditional and safe beginner-friendly Asanas taken from Hatha Yoga. If you are interested in learning about Yogic Philosophy and techniques that go beyond obscure poses performed by Western celebrities, I suggest you check out their website.</p><br>
         <p>Where I got certified as RYT 200: The Yoga Institute Santacruz, Mumbai.</p>
         <p>Find out more about my accredited Yoga school here:</p>
         <a href="https://theyogainstitute.org/">The Yoga Institute Mumbai Website</a><br>
