minor changes in about-me section and ran html check.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -49,7 +49,7 @@
 <div id="intro" class="section-1">
     <div class="container-fluid-quote-1">
         <p><i>"Yoga Chittavritti Nirodha"</i></p>
-        <p>Maharshi Patanjali, ancient rishi and founder of the Yoga Sutras (ca. 250 B.C.) defines Yog as concentration.</p>
+        <p>Maharshi Patanjali, ancient rishi and writer of the Yoga Sutras (ca. 250 B.C.) defines Yog(a) as concentration.</p>
         <p>The above saying translates to <i>"stoppage of the fluctuations of the mind."</i></p>
     </div>
 </div>
@@ -118,12 +118,12 @@
     <h1>About Me</h1>
     <img src="./images/mirjam.jpg" class="rounded-circle" alt="Mirjam" width="250" height="250">
     <div class="about-me">
-        <p>My love for Yoga did not develop overnight, it took me a few years to get into it. Meditation and my love for Indian culture and philosophy made me want to learn more about Yogic Philosophy and the traditional forms of Yoga. It was very important to me to be taught by Indian teachers because I was looking to learn things that go beyond the practice of Asanas.</p>
-        <p>During my research I found out about The Yoga Institute Santacruz, Mumbai. The Yoga Institute Mumbai is the oldest accredited Yoga school in the world. The current guru, Dr. Hansaji Yogendra, wife of the late Dr. Yogendra, had an influential role in the formulation of a formal syllabus for Yoga schools across the world. To this day she remains one of India's most influential experts in the field of Yoga. I thoroughly enjoyed my learning experience with my Indian teachers and "batch mates". I miss them dearly. We still message each other or meet up via Zoom to practice together.</p>
-        <p>The sequence that I follow is the sequence that I learned from my Indian teachers. I was also trained in Kriyas and Pranayamas which I practice. The Asanas that I am certified to teach are traditional and safe beginner-friendly Asanas taken from Hatha Yoga. If you are interested in learning about Yogic Philosophy and techniques that go beyond obscure poses performed by Western celebrities, I suggest you check out their website.</p><br>
+        <p>My passion for Yoga as a lifestyle did not develop overnight, it took me a few years to get into it. It all started with practicing Kundalini Yoga and meditation. However, my love for Indian culture and ancient philosophies led me to want to learn even more. There is a lot more to Yoga than just the physical aspect of performing Asanas. Realizing that Yoga has more to do with a way of life rather than exercise, it was very important to me to be taught by Indian teachers so I could get a more "authentic" experience in my eyes.</p>
+        <p>During my research I found out about The Yoga Institute Santacruz, Mumbai. The Yoga Institute Mumbai is the oldest accredited Yoga school in the world. The current director, Dr. Hansaji Yogendra, wife of the late Dr. Yogendra, played an important role in the formulation of a formal syllabus for Yoga schools across the world. To this day she remains one of India's most influential experts in the field of Yoga. Going through the teacher training program was hard at times but what I received in return is immeasurable. I thoroughly enjoyed my learning experience with my Indian teachers and "batch mates" and have stayed in touch with both the Institute and my Indian friends.</p>
+        <p>In addition to the Asanas, I also received training in the practice of Kriyas and Pranayamas. The Asanas that I am certified to teach are traditional (no celebrity Yoga here), safe and beginner-friendly. They are taken from ancient forms of Hatha Yoga. If you are interested in learning about Yogic Philosophy and techniques that go beyond the physical aspects, I strongly suggest you check out the Yoga Institute's website.</p><br>
         <p>Where I got certified as RYT 200: The Yoga Institute Santacruz, Mumbai.</p>
-        <p>Find out more about my accredited Yoga school here:</p>
         <a href="https://theyogainstitute.org/">The Yoga Institute Mumbai Website</a><br>
+        <p>Find out more about the accredited school in this video:</p>
         <a href="https://www.youtube.com/watch?v=jwDhDbeShQw&t=8s/">YouTube Video on The Yoga Institute</a>
     </div>
     </div>
