fixed stretched images in mobile view.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,7 +22,7 @@
 <!--Navbar section-->
 <nav class="navbar navbar-expand-md navbar-dark p-3 bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Patanjali ૐ Yogini</a>
+        <a class="navbar-brand" href="#about-me">Patanjali ૐ Yogini</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
